--- a/index.html
+++ b/index.html
@@ -343,6 +343,9 @@
 <a href="https://vehikl.com/" target="_blank" style="width: 160px;">
   <img src="/images/vehikl.png" style="width: 160px;" alt="vehikl">
 </a>
+<a href="https://www.nativescript.org/vue?utm_source=vue-js-org&utm_medium=website&utm_campaign=nativescript-awareness" target="_blank" style="width: 160px;">
+  <img src="/images/nativescript.png" style="width: 160px;" alt="nativescript">
+</a>
 <br>
 <br>
 <a href="https://www.vuemastery.com/" target="_blank" style="width: 120px;">
@@ -401,6 +404,12 @@
 </a>
 <a href="https://tidelift.com/subscription/npm/vue" target="_blank" style="width: 120px;">
   <img src="/images/tidelift.png" style="width: 120px;" alt="tidelift">
+</a>
+<a href="https://webdock.io/en" target="_blank" style="width: 120px;">
+  <img src="/images/webdock.png" style="width: 120px;" alt="webdock">
+</a>
+<a href="https://syncfusion.com/products/vue" target="_blank" style="width: 120px;">
+  <img src="/images/syncfusion.png" style="width: 120px;" alt="syncfusion">
 </a>
 <br>
 
