--- a/support-vuejs/index.html
+++ b/support-vuejs/index.html
@@ -376,19 +376,19 @@ Les soutiens récurrents viennent avec des avantages exclusifs comme avoir son n
   <a href="https://vehikl.com/" target="_blank">
     <img src="/images/vehikl.png">
   </a>
+  <a href="https://www.nativescript.org/vue?utm_source=vue-js-org&utm_medium=website&utm_campaign=nativescript-awareness" target="_blank">
+    <img src="/images/nativescript.png">
+  </a>
 </p>
 
-<h3>Platine OpenCollective</h3>
+<h3>Sponsors spéciaux (Chine)</h3>
 
-<p class="open-collective-sponsors sponsor-section">
-  <a href="https://opencollective.com/vuejs/tiers/platinum-sponsors/0/website" target="_blank">
-    <img src="https://opencollective.com/vuejs/tiers/platinum-sponsors/0/avatar.svg">
+<p class="platinum">
+  <a href="https://www.geekbang.org/" target="_blank">
+    <img src="/images/geekbang.png">
   </a>
-  <a href="https://opencollective.com/vuejs/tiers/platinum-sponsors/1/website" target="_blank">
-    <img src="https://opencollective.com/vuejs/tiers/platinum-sponsors/1/avatar.svg">
-  </a>
-  <a href="https://opencollective.com/vuejs/tiers/platinum-sponsors/2/website" target="_blank">
-    <img src="https://opencollective.com/vuejs/tiers/platinum-sponsors/2/avatar.svg">
+  <a href="https://gitee.com/?from=vue" target="_blank">
+    <img src="/images/gitee.png">
   </a>
 </p>
 
@@ -451,6 +451,12 @@ Les soutiens récurrents viennent avec des avantages exclusifs comme avoir son n
   </a>
   <a href="https://tidelift.com/subscription/npm/vue" target="_blank">
     <img src="/images/tidelift.png">
+  </a>
+  <a href="https://webdock.io/en" target="_blank">
+    <img src="/images/webdock.png">
+  </a>
+  <a href="https://syncfusion.com/products/vue" target="_blank">
+    <img src="/images/syncfusion.png">
   </a>
 </p>
 
