--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <li>
       <ul>
         <li><a href="https://github.com/vuejs/vue-devtools" class="nav-link" target="_blank">Devtools (En)</a></li>
-        <li><a href="https://vuejs-templates.github.io/webpack" class="nav-link" target="_blank">Template webpack (En)</a></li>
+        <li><a href="https://cli.vuejs.org/" class="nav-link" target="_blank">Vue CLI (En)</a></li>
         <li><a href="https://vue-loader.vuejs.org" class="nav-link" target="_blank">Vue Loader (En)</a></li>
       </ul>
     </li>
@@ -212,7 +212,7 @@
     <li>
       <ul>
         <li><a href="https://github.com/vuejs/vue-devtools" class="nav-link" target="_blank">Devtools (En)</a></li>
-        <li><a href="https://vuejs-templates.github.io/webpack" class="nav-link" target="_blank">Template webpack (En)</a></li>
+        <li><a href="https://cli.vuejs.org/" class="nav-link" target="_blank">Vue CLI (En)</a></li>
         <li><a href="https://vue-loader.vuejs.org" class="nav-link" target="_blank">Vue Loader (En)</a></li>
       </ul>
     </li>
@@ -297,10 +297,11 @@
 
 <div id="special-sponsor">
   <h3>Sponsors spéciaux</h3>
-  <a href="https://stdlib.com/" target="_blank">
-    <img src="/images/stdlib.png" style="width:160px" alt="Logo standard de la Bibliothèque">
+  
+  <a href="https://code.xyz/" target="_blank">
+    <img src="/images/codexyz.png" style="width:160px" alt="Code.xyz Logo">
     <br>
-    <span>Fonction en tant que plateforme de service et bibliothèque</span>
+    <span>Créer des APIs pour votre navigateur web</span>
   </a>
 </div>
 
@@ -410,6 +411,9 @@
 </a>
 <a href="https://syncfusion.com/products/vue" target="_blank" style="width: 120px;">
   <img src="/images/syncfusion.png" style="width: 120px;" alt="syncfusion">
+</a>
+<a href="https://kintohub.com" target="_blank" style="width: 120px;">
+  <img src="/images/kintohub.png" style="width: 120px;" alt="kinto hub">
 </a>
 <br>
 
