--- a/support-vuejs/index.html
+++ b/support-vuejs/index.html
@@ -119,7 +119,7 @@
     <li>
       <ul>
         <li><a href="https://github.com/vuejs/vue-devtools" class="nav-link" target="_blank">Devtools (En)</a></li>
-        <li><a href="https://vuejs-templates.github.io/webpack" class="nav-link" target="_blank">Template webpack (En)</a></li>
+        <li><a href="https://cli.vuejs.org/" class="nav-link" target="_blank">Vue CLI (En)</a></li>
         <li><a href="https://vue-loader.vuejs.org" class="nav-link" target="_blank">Vue Loader (En)</a></li>
       </ul>
     </li>
@@ -214,7 +214,7 @@
     <li>
       <ul>
         <li><a href="https://github.com/vuejs/vue-devtools" class="nav-link" target="_blank">Devtools (En)</a></li>
-        <li><a href="https://vuejs-templates.github.io/webpack" class="nav-link" target="_blank">Template webpack (En)</a></li>
+        <li><a href="https://cli.vuejs.org/" class="nav-link" target="_blank">Vue CLI (En)</a></li>
         <li><a href="https://vue-loader.vuejs.org" class="nav-link" target="_blank">Vue Loader (En)</a></li>
       </ul>
     </li>
@@ -356,8 +356,8 @@ Les soutiens récurrents viennent avec des avantages exclusifs comme avoir son n
 <h3>Sponsors spéciaux</h3>
 
 <p class="platinum">
-  <a href="https://stdlib.com" target="_blank">
-    <img src="/images/stdlib.png">
+  <a href="https://code.xyz/" target="_blank">
+    <img src="/images/codexyz.png">
   </a>
 </p>
 
@@ -457,6 +457,9 @@ Les soutiens récurrents viennent avec des avantages exclusifs comme avoir son n
   </a>
   <a href="https://syncfusion.com/products/vue" target="_blank">
     <img src="/images/syncfusion.png">
+  </a>
+  <a href="https://kintohub.com" target="_blank">
+    <img src="/images/kintohub.png">
   </a>
 </p>
 
