--- a/support-vuejs/index.html
+++ b/support-vuejs/index.html
@@ -381,6 +381,41 @@ Les soutiens récurrents viennent avec des avantages exclusifs comme avoir son n
   </a>
 </p>
 
+<h3>OpenCollective Platine</h3>
+
+<p class="open-collective-sponsors sponsor-section">
+  <a href="https://opencollective.com/vuejs/tiers/platinum-sponsors/0/website" target="_blank">
+    <img src="https://opencollective.com/vuejs/tiers/platinum-sponsors/0/avatar.svg">
+  </a>
+  <a href="https://opencollective.com/vuejs/tiers/platinum-sponsors/1/website" target="_blank">
+    <img src="https://opencollective.com/vuejs/tiers/platinum-sponsors/1/avatar.svg">
+  </a>
+  <a href="https://opencollective.com/vuejs/tiers/platinum-sponsors/2/website" target="_blank">
+    <img src="https://opencollective.com/vuejs/tiers/platinum-sponsors/2/avatar.svg">
+  </a>
+  <a href="https://opencollective.com/vuejs/tiers/platinum-sponsors/3/website" target="_blank">
+    <img src="https://opencollective.com/vuejs/tiers/platinum-sponsors/3/avatar.svg">
+  </a>
+  <a href="https://opencollective.com/vuejs/tiers/platinum-sponsors/4/website" target="_blank">
+    <img src="https://opencollective.com/vuejs/tiers/platinum-sponsors/4/avatar.svg">
+  </a>
+  <a href="https://opencollective.com/vuejs/tiers/platinum-sponsors/5/website" target="_blank">
+    <img src="https://opencollective.com/vuejs/tiers/platinum-sponsors/5/avatar.svg">
+  </a>
+  <a href="https://opencollective.com/vuejs/tiers/platinum-sponsors/6/website" target="_blank">
+    <img src="https://opencollective.com/vuejs/tiers/platinum-sponsors/6/avatar.svg">
+  </a>
+  <a href="https://opencollective.com/vuejs/tiers/platinum-sponsors/7/website" target="_blank">
+    <img src="https://opencollective.com/vuejs/tiers/platinum-sponsors/7/avatar.svg">
+  </a>
+  <a href="https://opencollective.com/vuejs/tiers/platinum-sponsors/8/website" target="_blank">
+    <img src="https://opencollective.com/vuejs/tiers/platinum-sponsors/8/avatar.svg">
+  </a>
+  <a href="https://opencollective.com/vuejs/tiers/platinum-sponsors/9/website" target="_blank">
+    <img src="https://opencollective.com/vuejs/tiers/platinum-sponsors/9/avatar.svg">
+  </a>
+</p>
+
 <h3>Sponsors spéciaux (Chine)</h3>
 
 <p class="platinum">
@@ -461,9 +496,12 @@ Les soutiens récurrents viennent avec des avantages exclusifs comme avoir son n
   <a href="https://kintohub.com" target="_blank">
     <img src="/images/kintohub.png">
   </a>
+  <a href="https://opteo.com/vue" target="_blank">
+    <img src="/images/opteo.png">
+  </a>
 </p>
 
-<h3>Or OpenCollective</h3>
+<h3>opencollective Or</h3>
 
 <p class="open-collective-sponsors sponsor-section">
   <a href="https://opencollective.com/vuejs/tiers/gold-sponsors/0/website" target="_blank">
@@ -498,11 +536,31 @@ Les soutiens récurrents viennent avec des avantages exclusifs comme avoir son n
   </a>
 </p>
 
-<h3>Patreon Silver</h3>
+<h3>Patreon Argent</h3>
 
 <p class="patreon-sponsors sponsor-section">
   <a href="https://dopamine.bg/" target="_blank">
     <img src="/images/dopamine.png">
+  </a>
+</p>
+
+<h3>OpenCollective Argent</h3>
+
+<p class="open-collective-sponsors sponsor-section">
+  <a href="https://opencollective.com/vuejs/tiers/silver-sponsors/0/website" target="_blank">
+    <img src="https://opencollective.com/vuejs/tiers/silver-sponsors/0/avatar.svg">
+  </a>
+  <a href="https://opencollective.com/vuejs/tiers/silver-sponsors/1/website" target="_blank">
+    <img src="https://opencollective.com/vuejs/tiers/silver-sponsors/1/avatar.svg">
+  </a>
+  <a href="https://opencollective.com/vuejs/tiers/silver-sponsors/2/website" target="_blank">
+    <img src="https://opencollective.com/vuejs/tiers/silver-sponsors/2/avatar.svg">
+  </a>
+  <a href="https://opencollective.com/vuejs/tiers/silver-sponsors/3/website" target="_blank">
+    <img src="https://opencollective.com/vuejs/tiers/silver-sponsors/3/avatar.svg">
+  </a>
+  <a href="https://opencollective.com/vuejs/tiers/silver-sponsors/4/website" target="_blank">
+    <img src="https://opencollective.com/vuejs/tiers/silver-sponsors/4/avatar.svg">
   </a>
 </p>
 
