--- a/v2/cookbook/index.html
+++ b/v2/cookbook/index.html
@@ -393,7 +393,7 @@
     
     
     <li>
-      <a href="/v2/cookbook/dockerize-vuejs-app.html" class="sidebar-link">Dockerize Vue.js App (EN)</a>
+      <a href="/v2/cookbook/dockerize-vuejs-app.html" class="sidebar-link">Dockeriser une app Vue.js</a>
     </li>
   
 </ul>
