--- a/v2/guide/team.html
+++ b/v2/guide/team.html
@@ -1200,7 +1200,9 @@
     'Thessaloniki, Greece': [40.640063, 22.944419],
     'Tokyo, Japan': [35.689487, 139.691706],
     'Toronto, Canada': [43.653226, -79.383184],
-    'Wrocław, Poland': [51.107885, 17.038538]
+    'Wrocław, Poland': [51.107885, 17.038538],
+    'Boston, MA, USA': [42.360081, -71.058884],
+    'Kyiv, Ukraine': [50.450100, 30.523399]
   }
   var languageNameFor = {
     en: 'English',
@@ -1217,7 +1219,8 @@
     hi: 'हिंदी',
     fa: 'فارسی',
     ko: '한국어',
-    ro: 'Română'
+    ro: 'Română',
+    uk: 'Українська'
   }
 
   var team = [{
@@ -1346,7 +1349,7 @@
         'vue-i18n', 'vue-cli-plugin-i18n', 'vue-i18n-loader', 'vue-i18n-extensions'
       ],
       links: [
-        'https://cuusoo.com', 'http://frapwings.jp'
+        'https://www.patreon.com/kazupon', 'https://cuusoo.com', 'http://frapwings.jp'
       ]
     },
     {
@@ -1477,6 +1480,9 @@
       ],
       reposPersonal: [
         'vue-apollo', 'vue-meteor', 'vue-virtual-scroller', 'v-tooltip'
+      ],
+      links: [
+        'http://patreon.com/akryum'
       ]
     },
     {
@@ -1574,6 +1580,9 @@
       work: {
         role: 'Consultant'
       },
+      reposOfficial: [
+        'news.vuejs.org'
+      ],
       reposPersonal: [
         'shentao/vue-multiselect'
       ]
@@ -1665,6 +1674,37 @@
   ]))
 
   var partners = [
+    {
+      name: 'Jen Looper',
+      title: 'Queen Fox',
+      city: 'Boston, MA, USA',
+      languages: ['en', 'fr'],
+      work: {
+        role: 'CEO',
+        org: 'Vue Vixens'
+      },
+      github: 'jlooper',
+      twitter: 'jenlooper',
+      links: [
+        'https://vuevixens.org/',
+        'https://nativescript-vue.org/'
+      ]
+    },
+    {
+      name: 'Natalia Tepluhina',
+      title: 'Fox Tech Guru',
+      city: 'Kyiv, Ukraine',
+      languages: ['uk', 'ru', 'en'],
+      work: {
+        role: 'CTO',
+        org: 'Vue Vixens',
+      },
+      github: 'NataliaTepluhina',
+      twitter: 'N_Tepluhina',
+      links: [
+        'https://vuevixens.org/'
+      ]
+    },
     {
       name: 'Alex Jover',
       title: 'Vue Components Squeezer',
