--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 
 <div class="open-collective-sponsors">
   <h3>Sponsors OpenCollective</h3>
-  <h4>Platinum</h4>
+  <h4>Platine</h4>
   <a href="https://opencollective.com/vuejs/tiers/platinum-sponsors/0/website" target="_blank">
     <img src="https://opencollective.com/vuejs/tiers/platinum-sponsors/0/avatar.svg">
   </a>
