--- a/index.html
+++ b/index.html
@@ -419,6 +419,15 @@
 <a href="https://passionatepeople.io/" target="_blank" style="width: 120px;">
   <img src="/images/passionate_people.png" style="width: 120px;" alt="Passionate People">
 </a>
+<a href="https://www.bestvpn.co/" target="_blank" style="width: 120px;">
+  <img src="/images/bestvpn_co.png" style="width: 120px;" alt="BestVPN.co">
+</a>
+<a href="http://en.shopware.com/" target="_blank" style="width: 120px;">
+  <img src="/images/shopware_ag.svg" style="width: 120px;" alt="shopware AG">
+</a>
+<a href="http://x-team.com/join" target="_blank" style="width: 120px;">
+  <img src="/images/x_team.png" style="width: 120px;" alt="X-Team">
+</a>
 <br>
 
 <a class="become-sponsor button white" href="/support-vuejs/">Devenir sponsor !</a>
