--- a/support-vuejs/index.html
+++ b/support-vuejs/index.html
@@ -497,6 +497,15 @@ Les soutiens récurrents viennent avec des avantages exclusifs comme avoir son n
   <a href="https://passionatepeople.io/" target="_blank">
     <img src="/images/passionate_people.png">
   </a>
+  <a href="https://www.bestvpn.co/" target="_blank">
+    <img src="/images/bestvpn_co.png">
+  </a>
+  <a href="http://en.shopware.com/" target="_blank">
+    <img src="/images/shopware_ag.svg">
+  </a>
+  <a href="http://x-team.com/join" target="_blank">
+    <img src="/images/x_team.png">
+  </a>
 </p>
 
 <h3>opencollective Or</h3>
