--- a/v2/guide/team.html
+++ b/v2/guide/team.html
@@ -1587,6 +1587,11 @@
       languages: ['vi', 'en'],
       github: 'phanan',
       twitter: 'notphanan',
+      work: {
+        role: 'Engineering Team Lead',
+        org: 'InterNations',
+        orgUrl: 'https://www.internations.org/'
+      },
       reposOfficial: [
         'vuejs.org'
       ],
